# sandroid

./: .gitignore  README.md  commit_from_commandline.sh  configure.ac
src/base/: base.opensdf  base.vcxproj  base.vcxproj.filters  base_i18n_nacl.vcxproj  base_i18n_nacl.vcxproj.filters  base_i18n_nacl_win64.vcxproj  base_message_loop_tests.vcxproj  base_nacl.sln  base_nacl.vcxproj  base_nacl.vcxproj.filters  base_paths.h  base_paths_win.h  base_perftests.vcxproj  base_prefs.vcxproj  base_static.vcxproj  base_static_win64.vcxproj  base_unittests.vcxproj.filters  base_unittests_run.props  base_unittests_run.vcxproj  base_win64.vcxproj  base_win64.vcxproj.filters  compiler_specific.h  debug_message.vcxproj  eintr_wrapper.h  gtest_prod_util.h  irt-x86-32.base_nacl.source_list.gypcmd  macros.h  path_service.cc  path_service.h  run_all_unittests.vcxproj  supports_user_data.h  test_support_base.vcxproj  test_support_perf.vcxproj
src/base/allocator/: allocator.sln  allocator_extension_thunks.vcxproj  allocator_extension_thunks_win64.vcxproj
src/base/files/: file_util.h
src/base/system_monitor/: system_monitor.cc
src/base/win/: shortcut.cc  shortcut.h  win_util.h
src/base_old/: base.sln  base_i18n.vcxproj  base_i18n_perftests.vcxproj  base_paths_win.cc  base_prefs_test_support.vcxproj  base_unittests.vcxproj  build_utf8_validator_tables.vcxproj  check_example.vcxproj  gtest_prod_util.h  supports_user_data.cc  test_support_base.vcxproj.filters
src/base_old/allocator/: allocator.vcxproj  allocator_unittests.vcxproj  libcmt.vcxproj  tcmalloc_unittest.vcxproj
src/base_old/files/: file_util_win.cc
src/base_old/posix/: CMakeLists.txt
src/base_old/system_monitor/: system_monitor.h
src/base_old/win/: win_util.cc
src/bpf_dsl/: CMakeLists.txt  bpf_dsl.cc  bpf_dsl.h  policy_compiler.cc  policy_compiler.h
src/bpf_dsl/build_old/: CMakeCache.txt  cmake_install.cmake
src/bpf_dsl/test/: bpf_dsl_more_unittest.cc  bpf_dsl_unittest.cc  bpf_simple_test_c.cpp
src/sandbox/: sandbox_export.h
src/seccomp-bpf/: CMakeLists.txt  basicblock.cc  basicblock.h  bpf_tester_compatibility_delegate.h  bpf_tests.h  bpf_tests_unittest.cc  codegen.cc  codegen.h  codegen_unittest.cc  die.cc  errorcode.cc  errorcode.h  errorcode_unittest.cc  sandbox_bpf.cc  sandbox_bpf.h  sandbox_bpf_test_runner.cc  sandbox_bpf_test_runner.h  syscall.cc  syscall.h  syscall_iterator.cc  syscall_iterator_unittest.cc  syscall_unittest.cc  trap.cc  trap.h  verifier.cc
src/seccomp-bpf/test/: bpf_tests_unittest.cc
src/services/: CMakeLists.txt  android_ucontext.h  broker_process.cc  broker_process.h  broker_process_unittest.cc  credentials.cc  init_process_reaper.cc  libc_urandom_override.cc  linux_syscalls.h  scoped_process.cc  scoped_process_unittest.cc  thread_helpers.cc  thread_helpers_unittests.cc  unix_domain_socket_unittest.cc  yama.cc  yama_unittests.cc
src/services/test/: broker_process_unittest.cc
src/suid/: process_util_linux.c  sandbox.c
src/suid/client/: setuid_sandbox_client.cc
src/tests/: CMakeLists.txt  main.cc  sandbox_test_runner.cc  sandbox_test_runner_function_pointer.cc  sandbox_test_runner_function_pointer.h  scoped_temporary_file.cc  scoped_temporary_file_unittest.cc  test_utils.cc  unit_tests.cc  unit_tests.h  unit_tests_unittest.cc
src/tests/build_old/: CMakeCache.txt  cmake_install.cmake
